パッケージ名修正と期限入力対応の反映

--- a/static/input.html
+++ b/static/input.html
@@ -26,6 +26,9 @@
         <h3>詳細</h3>
         <input type="text" name="detail">
 
+        <h3>期限</h3>
+        <input type="text" name="deadline">
+
         <p><input type="submit" value="追加する"></p>
     </form>
     </div>
