GoogleSheetsからデータを読み込みhttpサーバでhtml形式のリストに表示する

--- a/static/list.html
+++ b/static/list.html
@@ -39,6 +39,8 @@
                 <option value="{{.Key}}">
                     [{{.Key}}]
                     {{.Title}}
+                    {{.Weekday}}
+                    {{.Limit}}
                 </option>
                 {{else}}
                 <option value=""> No data</option>
