リストの表示に"視聴期限"の文字を追加

--- a/static/list2.html
+++ b/static/list2.html
@@ -36,7 +36,7 @@
                     </td>
                     <td>
                         <font size="1" color="#ff0000">
-                            {{.Deadline}}
+                            視聴期限：{{.Deadline}}
                         </font>
                     </td>
                 </tr>
