--- a/static/list.html
+++ b/static/list.html
@@ -2,55 +2,49 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>MyTODO</title>
+<title>RadioRemainder</title>
 <meta name="viewport" content="width=device-width,
  initial-scale=1.0,user-scalable=yes" />
     <style>
         input{
             font-size:16px;
-            width: 18em;
-        }
-        select{
-            width: 18em;
-            font-size: 16px;
+            width: 3em;
         }
     </style>
 </head>
 <body>
-    <!-- 新しいアイテム入力へジャンプ -->
-    <div class="InputSample">
-        <h2>
-            新しいアイテム
-        </h2>
-        <form class="menu_operation" action="/input" method="post">
-            <p><input type="submit" value="追加する" name="add"></p>
-        </form>
-    </div>
-    <!-- 新しいアイテム入力へジャンプ ここまで -->
-
     <!-- リスト表示エリア -->
 	<div class="ListSample">
         <h2>
-            TODOアイテム一覧
+            今週のラジオプログラムリスト
         </h2>
-        <form class="list_operation" action="/operation_post" method="post">
-            <select name="select_key" size="5">
-                {{range .}}
-                <option value="{{.Key}}">
-                    [{{.Key}}]
-                    {{.Title}}
-                    {{.Weekday}}
-                    {{.Limit}}
-                </option>
-                {{else}}
-                <option value=""> No data</option>
-                {{end}}
-            </select>
-
-            <p><input type="submit" value="完了" name="complete"></p>
-            <p><input type="submit" value="削除" name="delete"></p>
-            <p><input type="submit" value="戻る" name="reset"></p>
-        </form>
+            {{range .}}
+            <table>
+                <tr>
+                  <th rowspan="2">
+                    <form class="list_operation" action="/post" method="post">
+                        <input type="submit" value="完了" name="{{.Title}}{{.Deadline}}">
+                    </form>
+                    <form class="list_operation" action="/play" method="post">
+                        <input type="submit" value="再生" name="{{.Title}}{{.Deadline}}">
+                    </form>
+                  </th>
+                  <td colspan="2">{{.Title}}</td>
+                </tr>
+                <tr>
+                    <td>
+                        <font size="1" color="#0000ff">
+                        {{.Weekday}}
+                        </font>
+                    </td>
+                    <td>
+                        <font size="1" color="#ff0000">
+                            視聴期限：{{.Deadline}}
+                        </font>
+                    </td>
+                </tr>
+            </table>
+            {{end}}
     </div>
     <!-- リスト表示エリアここまで -->
 </body>
